# Ranker

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  deps.py  docker-compose.yml  entrypoint.sh  fly.toml  input.css  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  schemas.py  services.py  store.py
.github/workflows/: fly-deploy.yml
routers/: battle.py  manage.py  ranking.py
templates/: base.html  battle.html  battle_empty.html  index.html  manage.html  ranking.html
tests/: test_battle.py  test_services.py  test_store.py
