[project]
name = "battle-ranker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.42.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "pip-audit>=2.7",
]
